[package]
name = "mutual"
version = "1.0.1"
edition = "2024"
description = "A library of useful atomic objects for concurrent operations."
authors = ["DaylightNebula"]
license = "MIT"

[dependencies]
arc-swap = "1.8.2"
bincode = { version = "2.0.1", features = ["serde"] }
dashmap = "6.1.0"
derive_more = { version = "2.1.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
siphasher = "1.0.2"
